--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -85,7 +85,7 @@
 
     <!-- These values correspond to the time interval between frame capture in
     different units (i.e. seconds, minutes, hours) for time lapse recording -->
-    <string-array name="pref_video_time_lapse_frame_interval_entries" translatable="false">
+    <string-array name="pref_video_time_lapse_frame_interval_entries">
         <item>@string/pref_video_time_lapse_frame_interval_off</item>
         <item>@string/pref_video_time_lapse_frame_interval_500</item>
         <item>@string/pref_video_time_lapse_frame_interval_1000</item>
@@ -146,7 +146,7 @@
         <item>24</item>
     </string-array>
 
-    <string-array name="pref_video_time_lapse_frame_interval_units" translatable="false">
+    <string-array name="pref_video_time_lapse_frame_interval_units">
         <item>@string/time_lapse_seconds</item>
         <item>@string/time_lapse_minutes</item>
         <item>@string/time_lapse_hours</item>
@@ -549,5 +549,25 @@
         <item>5</item>
         <item>1</item>
      </string-array>
+
+    <!-- Camera Preferences for timer duration -->
+    <string-array name="pref_camera_focustime_duration_entries" translatable="false">
+        <item>@string/pref_camera_focustime_entry_infinite</item>
+        <item>@string/pref_camera_focustime_entry_30</item>
+        <item>@string/pref_camera_focustime_entry_20</item>
+        <item>@string/pref_camera_focustime_entry_15</item>
+        <item>@string/pref_camera_focustime_entry_10</item>
+        <item>@string/pref_camera_focustime_entry_5</item>
+    </string-array>
+
+    <!-- Camera focus duration - stored in milliseconds -->
+    <string-array name="pref_camera_focustime_duration_values" translatable="false">
+        <item>0</item>
+        <item>30000</item>
+        <item>20000</item>
+        <item>15000</item>
+        <item>10000</item>
+        <item>5000</item>
+    </string-array>
 
 </resources>
