--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -154,14 +154,26 @@
 
     <!-- Camera Preferences Picture size dialog box entries -->
     <string-array name="pref_camera_picturesize_entries" translatable="false">
+        <item>@string/pref_camera_picturesize_entry_13mp</item>
+        <item>@string/pref_camera_picturesize_entry_12_8mp</item>
+        <item>@string/pref_camera_picturesize_entry_11_5mp</item>
+        <item>@string/pref_camera_picturesize_entry_9mp</item>
         <item>@string/pref_camera_picturesize_entry_8mp</item>
+        <item>@string/pref_camera_picturesize_entry_6_4mp</item>
         <item>@string/pref_camera_picturesize_entry_5mp</item>
         <item>@string/pref_camera_picturesize_entry_5mp</item>
         <item>@string/pref_camera_picturesize_entry_5mp</item>
+        <item>@string/pref_camera_picturesize_entry_4mp</item>
         <item>@string/pref_camera_picturesize_entry_3mp</item>
+        <item>@string/pref_camera_picturesize_entry_2_5mp</item>
+        <item>@string/pref_camera_picturesize_entry_2_1mp</item>
         <item>@string/pref_camera_picturesize_entry_2mp</item>
+        <item>@string/pref_camera_picturesize_entry_1_5mp</item>
         <item>@string/pref_camera_picturesize_entry_1_3mp</item>
         <item>@string/pref_camera_picturesize_entry_1mp</item>
+        <item>@string/pref_camera_picturesize_entry_xga</item>
+        <item>@string/pref_camera_picturesize_entry_svga</item>
+        <item>@string/pref_camera_picturesize_entry_wvga</item>
         <item>@string/pref_camera_picturesize_entry_vga</item>
         <item>@string/pref_camera_picturesize_entry_qvga</item>
     </string-array>
@@ -170,14 +182,26 @@
          size to the first one in the list that is also supported by the
          driver -->
     <string-array name="pref_camera_picturesize_entryvalues" translatable="false">
+        <item>4208x3120</item>
+        <item>4128x3096</item>
+        <item>3920x2940</item>
+        <item>3920x2204</item>
         <item>3264x2448</item>
+        <item>3264x1968</item>
         <item>2592x1944</item>
         <item>2592x1936</item>
         <item>2560x1920</item>
+        <item>2560x1536</item>
         <item>2048x1536</item>
+        <item>2048x1232</item>
+        <item>1920x1080</item>
         <item>1600x1200</item>
+        <item>1600x960</item>
         <item>1280x960</item>
         <item>1024x768</item>
+        <item>1024x600</item>
+        <item>800x600</item>
+        <item>800x480</item>
         <item>640x480</item>
         <item>320x240</item>
     </string-array>
@@ -186,6 +210,7 @@
     <string-array name="pref_camera_focusmode_entries" translatable="false">
         <item>@string/pref_camera_focusmode_entry_auto</item>
         <item>@string/pref_camera_focusmode_entry_continuouspicture</item>
+        <item>@string/pref_camera_focusmode_entry_continuousvideo</item>
         <item>@string/pref_camera_focusmode_entry_extended</item>
         <item>@string/pref_camera_focusmode_entry_facedetect</item>
         <item>@string/pref_camera_focusmode_entry_facepriority</item>
@@ -193,11 +218,13 @@
         <item>@string/pref_camera_focusmode_entry_infinity</item>
         <item>@string/pref_camera_focusmode_entry_macro</item>
         <item>@string/pref_camera_focusmode_entry_portrait</item>
+        <item>@string/pref_camera_focusmode_entry_hyperfocal</item>
     </string-array>
 
     <string-array name="pref_camera_focusmode_entryvalues" translatable="false">
         <item>auto</item>
         <item>continuous-picture</item>
+        <item>continuous-video</item>
         <item>extended</item>
         <item>facedetect</item>
         <item>face-priority</item>
@@ -205,6 +232,7 @@
         <item>infinity</item>
         <item>macro</item>
         <item>portrait</item>
+        <item>hyperfocal</item>
     </string-array>
 
     <!-- Camera Preferences flash mode dialog box entries -->
@@ -333,9 +361,14 @@
         <item>@string/pref_camera_scenemode_entry_steadyphoto</item>
         <item>@string/pref_camera_scenemode_entry_theatre</item>
         <item>@string/pref_camera_scenemode_entry_backlight</item>
+        <item>@string/pref_camera_scenemode_entry_backlightportrait</item>
         <item>@string/pref_camera_scenemode_entry_document</item>
         <item>@string/pref_camera_scenemode_entry_barcode</item>
         <item>@string/pref_camera_scenemode_entry_text</item>
+        <item>@string/pref_camera_scenemode_entry_beauty</item>
+        <item>@string/pref_camera_scenemode_entry_flowers</item>
+        <item>@string/pref_camera_scenemode_entry_whiteboard</item>
+        <item>@string/pref_camera_scenemode_entry_backgroundblur</item>
     </string-array>
 
     <string-array name="pref_camera_scenemode_entryvalues" translatable="false">
@@ -364,9 +397,14 @@
         <item>steadyphoto</item>
         <item>theatre</item>
         <item>back-light</item>
+        <item>backlight_portrait</item>
         <item>document</item>
         <item>barcode</item>
         <item>text</item>
+        <item>beauty-mode</item>
+        <item>flowers</item>
+        <item>white-board</item>
+        <item>background-blur</item>
     </string-array>
 
     <array name="camera_id_entries" translatable="false">
@@ -568,6 +606,61 @@
         <item>15000</item>
         <item>10000</item>
         <item>5000</item>
+    </string-array>
+
+    <string-array name="pref_camera_voiceshutter_triggerwords">
+        <item>cheese</item>
+        <item>sorcery</item>
+        <item>click</item>
+        <item>take</item>
+        <item>snap</item>
+        <item>eagle</item>
+        <item>now</item>
+        <item>chick</item>
+    </string-array>
+
+    <!-- Camera Preferences for No-Hands shots (Voice / Timer) -->
+    <array name="camera_nohands_icons" translatable="false">
+        <item>@drawable/ic_indicator_timer_0</item>
+        <item>@drawable/ic_switch_voiceshutter</item>
+        <item>@drawable/ic_indicator_timer_10</item>
+        <item>@drawable/ic_indicator_timer_20</item>
+        <item>@drawable/ic_indicator_timer_30</item>
+        <item>@drawable/ic_indicator_timer_40</item>
+        <item>@drawable/ic_indicator_timer_50</item>
+        <item>@drawable/ic_indicator_timer_60</item>
+    </array>
+
+    <string-array name="pref_camera_nohands_entries" translatable="false">
+        <item>@string/pref_camera_timer_entry_0</item>
+        <item>@string/pref_camera_nohands_voice</item>
+        <item>@string/pref_camera_timer_entry_10</item>
+        <item>@string/pref_camera_timer_entry_20</item>
+        <item>@string/pref_camera_timer_entry_30</item>
+        <item>@string/pref_camera_timer_entry_40</item>
+        <item>@string/pref_camera_timer_entry_50</item>
+        <item>@string/pref_camera_timer_entry_60</item>
+    </string-array>
+
+    <string-array name="pref_camera_nohands_entryvalues" translatable="false">
+        <item>0</item>
+        <item>voice</item>
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+        <item>50</item>
+        <item>60</item>
+    </string-array>
+
+    <string-array name="pref_nohands_persistent_entries" translatable="false">
+        <item>@string/setting_off</item>
+        <item>@string/setting_on</item>
+    </string-array>
+
+    <string-array name="pref_nohands_persistent_entryvalues" translatable="false">
+        <item>@string/setting_off_value</item>
+        <item>@string/setting_on_value</item>
     </string-array>
 
 </resources>
